Mise à jour de Cabinet & endpoints