@@ -2,9 +2,11 @@ package org.odk.tooth_office.Services.Implementations;
 
 import lombok.RequiredArgsConstructor;
 import org.odk.tooth_office.DTO.SecretaireDTO;
+import org.odk.tooth_office.DTO.SecretaireResponseDTO;
 import org.odk.tooth_office.Entity.Cabinet;
 import org.odk.tooth_office.Entity.ChefCabinet;
 import org.odk.tooth_office.Entity.Secretaire;
+import org.odk.tooth_office.Mapper.SecretaireMapper;
 import org.odk.tooth_office.Repository.CabinetRepository;
 import org.odk.tooth_office.Repository.ChefCabinetRepository;
 import org.odk.tooth_office.Repository.SecretaireRepository;
@@ -13,7 +15,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,29 +23,35 @@ public class SecretaireServiceImplementation implements SecretaireService {
     private final SecretaireRepository secretaireRepository;
     private final CabinetRepository cabinetRepository;
     private final ChefCabinetRepository chefCabinetRepository;
+    private final SecretaireMapper secretaireMapper;
 
     @Override
-    public List<SecretaireDTO> getAll() {
-        return secretaireRepository.findAll().stream().map(this::toDto).collect(Collectors.toList());
+    public List<SecretaireResponseDTO> recupererTous() {
+        return secretaireRepository.findAll().stream()
+                .map(secretaireMapper::toResponseDTO)
+                .toList();
     }
 
     @Override
-    public Optional<SecretaireDTO> getById(Long id) {
-        return secretaireRepository.findById(id).map(this::toDto);
+    public Optional<SecretaireResponseDTO> getById(Long id) {
+        return secretaireRepository.findById(id)
+                .map(secretaireMapper::toResponseDTO);
     }
 
     @Override
-    public SecretaireDTO create(SecretaireDTO dto) {
-        Secretaire saved = secretaireRepository.save(toEntity(dto, new Secretaire()));
-        return toDto(saved);
+    public SecretaireResponseDTO create(SecretaireDTO dto) {
+        Secretaire secretaire = toEntity(dto, new Secretaire());
+        Secretaire saved = secretaireRepository.save(secretaire);
+        return secretaireMapper.toResponseDTO(saved);
     }
 
     @Override
-    public Optional<SecretaireDTO> update(Long id, SecretaireDTO dto) {
+    public Optional<SecretaireResponseDTO> update(Long id, SecretaireDTO dto) {
         return secretaireRepository.findById(id).map(existing -> {
             Secretaire updated = toEntity(dto, existing);
             updated.setId_utilisateur(id);
-            return toDto(secretaireRepository.save(updated));
+            Secretaire saved = secretaireRepository.save(updated);
+            return secretaireMapper.toResponseDTO(saved);
         });
     }
 
@@ -57,27 +64,7 @@ public class SecretaireServiceImplementation implements SecretaireService {
         return true;
     }
 
-    private SecretaireDTO toDto(Secretaire secretaire) {
-        SecretaireDTO dto = new SecretaireDTO();
-        dto.setId_utilisateur(secretaire.getId_utilisateur());
-        dto.setNom(secretaire.getNom());
-        dto.setPrenom(secretaire.getPrenom());
-        dto.setEmail(secretaire.getEmail());
-        dto.setMpd(secretaire.getMpd());
-        dto.setAdresse(secretaire.getAdresse());
-        dto.setRole(secretaire.getRole());
-        dto.setTelephone(secretaire.getTelephone());
-        dto.setStatutCompte(secretaire.getStatutCompte());
-        dto.setCreatedAt(secretaire.getCreatedAt());
-        dto.setUpdatedAt(secretaire.getUpdatedAt());
-        dto.setCreatedBy(secretaire.getCreatedBy());
-        dto.setUpdatedBy(secretaire.getUpdatedBy());
-
-        dto.setCabinetId(secretaire.getCabinet() != null ? secretaire.getCabinet().getIdCabinet() : null);
-        dto.setChefCabinetId(secretaire.getChefCabinet() != null ? secretaire.getChefCabinet().getId_utilisateur() : null);
-        return dto;
-    }
-
+    // Cette méthode gère la transformation des requêtes (DTO entrante) vers l'entité de la BDD
     private Secretaire toEntity(SecretaireDTO dto, Secretaire secretaire) {
         secretaire.setNom(dto.getNom());
         secretaire.setPrenom(dto.getPrenom());
